--- a/apps/equilibria/package.json
+++ b/apps/equilibria/package.json
@@ -24,11 +24,12 @@
     "@tamagui/toast": "^1.126.13",
     "babel-preset-expo": "~13.0.0",
     "burnt": "^0.12.2",
-    "expo": "53.0.7",
+    "expo": "^53.0.9",
     "expo-build-properties": "~0.14.6",
+    "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
-    "expo-linking": "~7.1.4",
-    "expo-router": "~5.0.5",
+    "expo-linking": "~7.1.5",
+    "expo-router": "~5.0.7",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.7",
