--- a/apps/equilibria/package.json
+++ b/apps/equilibria/package.json
@@ -3,6 +3,9 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
+    "upgrade:tamagui": "yarn up '*tamagui*'@latest '@tamagui/*'@latest",
+    "upgrade:tamagui:canary": "yarn up '*tamagui*'@canary '@tamagui/*'@canary",
+    "check:tamagui": "tamagui check",
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
@@ -13,10 +16,17 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
-    "@react-navigation/native": "^7.1.6",
-    "expo": "~53.0.9",
+    "@react-navigation/native": "^7.1.9",
+    "@tamagui/config": "^1.126.13",
+    "@tamagui/font-inter": "^1.126.13",
+    "@tamagui/lucide-icons": "^1.126.13",
+    "@tamagui/toast": "^1.126.13",
+    "babel-preset-expo": "^13.1.11",
+    "burnt": "^0.13.0",
+    "expo": "^53.0.9",
     "expo-blur": "~14.1.4",
-    "expo-constants": "~17.1.6",
+    "expo-build-properties": "^0.14.6",
+    "expo-constants": "^17.1.6",
     "expo-dev-client": "^5.1.8",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
@@ -36,12 +46,20 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
+    "react-native-svg": "^15.12.0",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "tamagui": "^1.126.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@expo/metro-config": "^0.20.14",
+    "@expo/metro-runtime": "^5.0.4",
+    "@tamagui/babel-plugin": "^1.126.13",
+    "@tamagui/cli": "^1.126.13",
+    "@tamagui/metro-plugin": "^1.126.13",
     "@types/react": "~19.0.10",
+    "@types/react-native": "^0.73.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
