--- a/apps/equilibria/package.json
+++ b/apps/equilibria/package.json
@@ -17,16 +17,18 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.9",
+    "@shopify/flash-list": "1.7.6",
     "@tamagui/config": "^1.126.13",
     "@tamagui/font-inter": "^1.126.13",
     "@tamagui/lucide-icons": "^1.126.13",
     "@tamagui/toast": "^1.126.13",
     "babel-preset-expo": "^13.1.11",
     "burnt": "^0.13.0",
+    "dotenv": "^16.5.0",
     "expo": "^53.0.9",
     "expo-blur": "~14.1.4",
     "expo-build-properties": "^0.14.6",
-    "expo-constants": "^17.1.6",
+    "expo-constants": "~17.1.6",
     "expo-dev-client": "^5.1.8",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
@@ -49,7 +51,8 @@
     "react-native-svg": "^15.12.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "tamagui": "^1.126.13"
+    "tamagui": "^1.126.13",
+    "valibot": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
