--- a/apps/equilibria/package.json
+++ b/apps/equilibria/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.9",
     "@shopify/flash-list": "1.7.6",
+    "@t3-oss/env-core": "^0.13.6",
     "@tamagui/config": "^1.126.13",
     "@tamagui/font-inter": "^1.126.13",
     "@tamagui/lucide-icons": "^1.126.13",
@@ -52,6 +53,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "tamagui": "^1.126.13",
+    "ts-node": "^10.9.2",
     "valibot": "^1.1.0"
   },
   "devDependencies": {
