--- a/apps/equilibria/package.json
+++ b/apps/equilibria/package.json
@@ -13,6 +13,8 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@auth/core": "0.37.0",
+    "@convex-dev/auth": "^0.0.86",
     "@expo/vector-icons": "^14.1.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
