--- a/apps/equilibria/package.json
+++ b/apps/equilibria/package.json
@@ -10,7 +10,8 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "eas-build-pre-install": "corepack enable && yarn set version 4"
   },
   "dependencies": {
     "@auth/core": "0.37.0",
