--- a/apps/equilibria/package.json
+++ b/apps/equilibria/package.json
@@ -19,14 +19,14 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
-    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native": "^7.1.9",
     "@shopify/flash-list": "1.7.6",
     "@t3-oss/env-core": "^0.13.6",
     "@tamagui/config": "^1.126.13",
     "@tamagui/font-inter": "^1.126.13",
     "@tamagui/lucide-icons": "^1.126.13",
     "@tamagui/toast": "^1.126.13",
-    "babel-preset-expo": "~13.0.0",
+    "babel-preset-expo": "^13.1.11",
     "burnt": "^0.13.0",
     "convex": "^1.24.2",
     "dotenv": "^16.5.0",
@@ -54,7 +54,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-    "react-native-svg": "15.11.2",
+    "react-native-svg": "^15.12.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "tamagui": "^1.126.13",
@@ -69,6 +69,7 @@
     "@tamagui/cli": "^1.126.13",
     "@tamagui/metro-plugin": "^1.126.13",
     "@types/react": "~19.0.10",
+    "@types/react-native": "^0.73.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
