--- a/apps/equilibria/package.json
+++ b/apps/equilibria/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.9",
     "@shopify/flash-list": "1.7.6",
+    "@shopify/react-native-skia": "^2.0.2",
     "@t3-oss/env-core": "^0.13.6",
     "@tamagui/config": "^1.126.13",
     "@tamagui/font-inter": "^1.126.13",
