--- a/apps/equilibria/package.json
+++ b/apps/equilibria/package.json
@@ -17,6 +17,7 @@
     "@auth/core": "0.37.0",
     "@convex-dev/auth": "^0.0.86",
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.9",
