--- a/apps/equilibria/convex/tsconfig.json
+++ b/apps/equilibria/convex/tsconfig.json
@@ -18,7 +18,11 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "isolatedModules": true,
-    "noEmit": true
+    "noEmit": true,
+
+    "paths": {
+      "@/*": ["./../*"]
+    }
   },
   "include": ["./**/*"],
   "exclude": ["./_generated"]
