--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "apps/*",
     "packages/*"
   ],
-  "packageManager": "yarn@4.9.1"
+  "packageManager": "yarn@4.9.1",
+  "dependencies": {
+    "util": "^0.12.5"
+  }
 }
