--- a/apps/equilibria/package.json
+++ b/apps/equilibria/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@auth/core": "0.37.0",
     "@convex-dev/auth": "^0.0.86",
+    "@csark0812/zustand-expo-devtools": "^2.0.2",
     "@expo/vector-icons": "^14.1.0",
     "@mobily/ts-belt": "^3.13.1",
     "@react-native-masked-view/masked-view": "0.3.2",
@@ -50,8 +51,6 @@
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
     "find-yarn-workspace-root": "^2.0.0",
-    "jotai": "^2.12.5",
-    "jotai-derive": "^0.1.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
@@ -65,7 +64,8 @@
     "tamagui": "^1.126.13",
     "ts-node": "^10.9.2",
     "ts-pattern": "^5.7.1",
-    "valibot": "^1.1.0"
+    "valibot": "^1.1.0",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
