--- a/apps/equilibria/package.json
+++ b/apps/equilibria/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@auth/core": "0.37.0",
+    "@babel/runtime": "^7.27.6",
     "@convex-dev/auth": "^0.0.86",
     "@csark0812/zustand-expo-devtools": "^2.0.2",
     "@expo/vector-icons": "^14.1.0",
@@ -43,6 +44,7 @@
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.1.7",
+    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.0.6",
     "expo-secure-store": "~14.2.3",
@@ -75,6 +77,7 @@
     "@tamagui/babel-plugin": "^1.126.13",
     "@tamagui/cli": "^1.126.13",
     "@tamagui/metro-plugin": "^1.126.13",
+    "@types/node": "^24.0.1",
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.73.0",
     "eslint": "^9.25.0",
