--- a/apps/equilibria/package.json
+++ b/apps/equilibria/package.json
@@ -42,11 +42,13 @@
     "expo-build-properties": "^0.14.6",
     "expo-constants": "~17.1.6",
     "expo-dev-client": "~5.2.0",
+    "expo-device": "~7.1.4",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.0",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.5",
+    "expo-notifications": "~0.31.3",
     "expo-router": "~5.1.0",
     "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.9",
